# tfjzl-final-cloud-app-with-database

./: main.py  pyproject.toml  requirements.txt
myproject/: settings.py
onlinecourse/: admin.py  urls.py  views.py
onlinecourse/migrations/: 0001_initial.py  0002_choice_alter_course_id_alter_enrollment_id_and_more.py
onlinecourse/templates/onlinecourse/: course_detail_bootstrap.html  exam_result_bootstrap.html
