[project]
name = "tfjzl-final-cloud-app-with-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.11",
    "click==8.1.8",
    "django==4.2.3",
    "gunicorn==20.1.0",
    "jinja2==3.1.4",
    "multidict==6.1.0",
    "pillow==10.0.0",
    "typing-extensions==4.7.0",
    "wheel==0.41.1",
]
